--- a/Integrador_Grupo6/Vistas/Vistas.csproj
+++ b/Integrador_Grupo6/Vistas/Vistas.csproj
@@ -76,10 +76,26 @@
     <Content Include="Imagenes\Iconos\cruz.png" />
     <Content Include="Imagenes\Iconos\signo mas.png" />
     <Content Include="Imagenes\Iconos\tachobasura.png" />
-    <Content Include="Imagenes\Productos\AuricularesInalambricosNoblex.jpg" />
-    <Content Include="Imagenes\Productos\JoystickPlay4.jpg" />
-    <Content Include="Imagenes\Productos\NotebookLenovo.jpg" />
-    <Content Include="Imagenes\Productos\RealidadVirtual.jpg" />
+    <Content Include="Imagenes\Productos\1.jpg" />
+    <Content Include="Imagenes\Productos\10.jpg" />
+    <Content Include="Imagenes\Productos\11.jpg" />
+    <Content Include="Imagenes\Productos\12.jpg" />
+    <Content Include="Imagenes\Productos\13.jpg" />
+    <Content Include="Imagenes\Productos\14.jpg" />
+    <Content Include="Imagenes\Productos\15.jpg" />
+    <Content Include="Imagenes\Productos\16.jpg" />
+    <Content Include="Imagenes\Productos\17.jpg" />
+    <Content Include="Imagenes\Productos\18.jpg" />
+    <Content Include="Imagenes\Productos\19.jpg" />
+    <Content Include="Imagenes\Productos\2.jpg" />
+    <Content Include="Imagenes\Productos\20.jpg" />
+    <Content Include="Imagenes\Productos\3.jpg" />
+    <Content Include="Imagenes\Productos\4.jpg" />
+    <Content Include="Imagenes\Productos\5.jpg" />
+    <Content Include="Imagenes\Productos\6.jpg" />
+    <Content Include="Imagenes\Productos\7.jpg" />
+    <Content Include="Imagenes\Productos\8.jpg" />
+    <Content Include="Imagenes\Productos\9.jpg" />
     <Content Include="Inicio.aspx" />
     <Content Include="StyleSheet.css" />
     <Content Include="Web.config" />
