funcionalidad del paso previo y agregar productos al carrito

--- a/Integrador_Grupo6/Negocio/Negocio.csproj
+++ b/Integrador_Grupo6/Negocio/Negocio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="NegocioProductos.cs" />
     <Compile Include="NegocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TablaCarrito.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dao\Dao.csproj">
