--- a/Integrador_Grupo6/Negocio/Negocio.csproj
+++ b/Integrador_Grupo6/Negocio/Negocio.csproj
@@ -46,8 +46,10 @@
     <Compile Include="NegocioCategorias.cs" />
     <Compile Include="NegocioColores.cs" />
     <Compile Include="NegocioDetalleFactura.cs" />
+    <Compile Include="NegocioEnvio.cs" />
     <Compile Include="NegocioFactura.cs" />
     <Compile Include="NegocioMarcas.cs" />
+    <Compile Include="NegocioPago.cs" />
     <Compile Include="NegocioProductos.cs" />
     <Compile Include="NegocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
