--- a/Integrador_Grupo6/Vistas/Vistas.csproj
+++ b/Integrador_Grupo6/Vistas/Vistas.csproj
@@ -73,8 +73,11 @@
     <Content Include="Carrito.aspx" />
     <Content Include="DetallesUsuario.aspx" />
     <Content Include="Imagenes\Iconos\agregar.png" />
+    <Content Include="Imagenes\Iconos\cancelar.png" />
     <Content Include="Imagenes\Iconos\carrito.png" />
+    <Content Include="Imagenes\Iconos\check.png" />
     <Content Include="Imagenes\Iconos\cruz.png" />
+    <Content Include="Imagenes\Iconos\lapiz.png" />
     <Content Include="Imagenes\Iconos\signo mas.png" />
     <Content Include="Imagenes\Iconos\tachobasura.png" />
     <Content Include="Imagenes\Productos\1.jpg" />
