--- a/Integrador_Grupo6/Vistas/Vistas.csproj
+++ b/Integrador_Grupo6/Vistas/Vistas.csproj
@@ -93,6 +93,10 @@
     <Content Include="Imagenes\Productos\19.jpg" />
     <Content Include="Imagenes\Productos\2.jpg" />
     <Content Include="Imagenes\Productos\20.jpg" />
+    <Content Include="Imagenes\Productos\21.jpg" />
+    <Content Include="Imagenes\Productos\22.png" />
+    <Content Include="Imagenes\Productos\23.jpg" />
+    <Content Include="Imagenes\Productos\24.jpeg" />
     <Content Include="Imagenes\Productos\3.jpg" />
     <Content Include="Imagenes\Productos\4.jpg" />
     <Content Include="Imagenes\Productos\5.jpg" />
